--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,6 @@
-/*style this using grid*/
-/*
-    https://css-tricks.com/snippets/css/complete-guide-grid/
-
-*/
+/*style this using CSS GRID*/
+/*https://css-tricks.com/snippets/css/complete-guide-grid/ */
+/*****NOT FLEXBOX***********/
 *{
     padding: 0;
     margin: 0;
@@ -13,7 +11,10 @@ body {
   width: 100%;
 }
 
-
+.container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
 
 li{
     list-style: none;
@@ -29,20 +30,25 @@ li{
 
 .right-nav li {
     display: inline;
-    padding: 1rem;
+    padding: 1.5rem;
     font-size: 1.5rem;
 }
 .right-nav svg {
-    height: 3.5rem;
-    padding-top: 1.0rem;
+    height: 3rem;
+    width: 3rem;
 }
 
 
 
 .left-nav {
     background: #4E4D75;
+    text-align: center;
+ 
 }
-
+    .left-nav svg {
+        height: 3.5rem;
+        margin: 1.5rem;
+    }
 .logo{
     width: 25%;
     padding: 1.25rem;
@@ -60,16 +66,43 @@ li{
     font-weight: 100;
 }
 
-
-
-
-
-
-
-.item-a {
-  grid-area: header;
+.social-stats-section {
+    padding: 1rem;
+    background-color: #8cffa0;
 }
-.item-b {
+
+.social-stats-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 5px;
+   
+    width: 100%;
+   
+    padding: 10px;
+}
+.social-stats-container svg {
+  height: 2rem;
+  width: 2rem;
+}
+
+.icon {
+    background: #747ABF;
+    border-radius: 100%;
+    text-align: center;
+    height: 4rem;
+    width: 4rem;
+    margin: 1rem;
+    padding: 1rem;
+}
+.icon path {
+    fill: #ffffff;
+}
+
+
+.left-nav{
+  grid-area: leftNav;
+}
+.main-content {
   grid-area: main;
 }
 .item-c {
@@ -80,11 +113,8 @@ li{
 }
 
 .container {
-  display: grid;
-  grid-template-columns: 50px 50px 50px 50px;
-  grid-template-rows: auto;
-  grid-template-areas:
-    "header header header header"
-    "main main . sidebar"
-    "footer footer footer footer";
+    display: grid;
+    grid-template-columns: 10% 90%;
+    grid-template-rows: auto;
+    grid-template-areas: "leftNav main" "leftNav main""leftNav main"
 }
