--- a/styles.css
+++ b/styles.css
@@ -24,20 +24,48 @@ li{
     background: #747ABF;
     display: flex;
     justify-content: space-between;
-    padding-top: 1.0rem;
+   
+    height: 6rem;
 }
 
-
-.right-nav li {
-    display: inline;
-    padding: 1.5rem;
+.logo {
+    width: 25%;
+    padding: 2rem;
     font-size: 1.5rem;
-}
-.right-nav svg {
-    height: 3rem;
-    width: 3rem;
+    color: #fff;
 }
 
+
+.bolder {
+    font-weight: 800;
+}
+
+.light {
+    font-weight: 100;
+}
+.right-nav {
+    width: 25%;
+}
+    .right-nav li {
+        display: inline;
+      
+        height: 6rem;
+        width: 6rem;
+    }
+    .right-nav svg {
+        height: 6rem;
+        width: 6rem;
+    }
+img.profile-pic {
+    height: 6rem;
+    width: 6rem;
+    border-radius: 100%;
+}
+
+li.profile-name {
+padding: 0;
+margin-top: -2rem;
+}
 
 
 .left-nav {
@@ -49,22 +77,10 @@ li{
         height: 3.5rem;
         margin: 1.5rem;
     }
-.logo{
-    width: 25%;
-    padding: 1.25rem;
-    font-size: 1.25rem;
-    color: #fff;
-}
 
 
 
 
-.bolder{
-    font-weight: 800;
-}
-.light{
-    font-weight: 100;
-}
 
 .social-stats-section {
     padding: 1rem;
@@ -116,5 +132,10 @@ li{
     display: grid;
     grid-template-columns: 10% 90%;
     grid-template-rows: auto;
-    grid-template-areas: "leftNav main" "leftNav main""leftNav main"
+    grid-template-areas: 
+        "leftNav main" 
+        "leftNav main"
+        "leftNav main";
+    height: 100%;
+
 }
