--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 /*style this using CSS GRID*/
 /*https://css-tricks.com/snippets/css/complete-guide-grid/ */
+/*https://alligator.io/css/css-grid-holy-grail-layout/ */
 /*****NOT FLEXBOX***********/
 *{
     padding: 0;
@@ -42,8 +43,11 @@ li{
 
 .right-nav {
     grid-area: rightNav;
-   
-
+    padding: 1rem;
+    font-size: 1.5rem;
+    display: grid;
+    grid-template-columns: 25% 25% 50%;
+    grid-gap: 0rem;
 }
 
 .top-nav {
@@ -61,19 +65,13 @@ li{
 
 
 
-.right-nav  {
-    
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-
-}
    
 .right-nav svg {
-    height: 6rem;
+    height: 3rem;
    
 }
 img.profile-pic {
-    height: 6rem;
+    height: 3rem;
     border-radius: 100%;
 }
 
@@ -85,12 +83,12 @@ padding: 1rem;
 .left-nav {
     background: #4E4D75;
     text-align: center;
-    padding-bottom: 10rem;
+    grid-template-rows: auto 1fr auto;
 }
-    .left-nav svg {
-        height: 3.5rem;
-        margin: 1.5rem;
-    }
+.left-nav svg {
+    height: 3.5rem;
+    margin: 1.5rem;
+}
 
 
 
@@ -139,11 +137,8 @@ padding: 1rem;
 .container {
     display: grid;
     grid-template-columns: 10% 90%;
-    grid-template-rows: auto;
-    grid-template-areas: 
-        "leftNav main" 
-        "leftNav main"
-        "leftNav main";
+    
+    grid-template-areas: "leftNav main" "leftNav main" "leftNav main";
     height: 100%;
-
+    grid-template-rows: auto 1fr auto;
 }
