--- a/styles.css
+++ b/styles.css
@@ -13,10 +13,7 @@ body {
   min-height: 100%;
 }
 
-.container{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-}
+
 
 li{
     list-style: none;  
@@ -58,6 +55,7 @@ li{
     grid-template-areas: 
         "logo offset rightNav";
     width: 100%;
+   
 }
 
 
@@ -137,8 +135,10 @@ padding: 1rem;
 .container {
     display: grid;
     grid-template-columns: 10% 90%;
-    
-    grid-template-areas: "leftNav main" "leftNav main" "leftNav main";
-    height: 100%;
+    grid-template-areas: 
+        "leftNav main" 
+        "leftNav main" 
+        "leftNav main";
     grid-template-rows: auto 1fr auto;
+    height: 100vh;
 }
