--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,15 @@
 /*https://css-tricks.com/snippets/css/complete-guide-grid/ */
 /*https://alligator.io/css/css-grid-holy-grail-layout/ */
 /*****NOT FLEXBOX***********/
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+ 
+}
+
+html{
+    width: 100%;
 }
 body {
   background: #fff;
@@ -150,15 +155,16 @@ section.alert {
 }
 
 
-.social-stats-section {
+section.social-stats-section {
+    max-width: 100vw;
 }
 
 .social-stats-container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(1, 1fr);
    
-
-    padding: 1rem;
+  
+   
 }
 .social-stats-container svg {
   height: 2rem;
@@ -215,4 +221,34 @@ section.alert {
         "leftNav main";
     grid-template-rows: auto 1fr auto;
     height: 100vh;
+}
+
+
+@media screen and (max-width: 768px){
+    .container {
+        grid-template-columns: 0% 100%;
+        grid-template-rows: auto 1fr auto;
+        height: 100vh;
+        
+    }
+}
+@media screen and (min-width: 768px) {
+    
+    .social-stats-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .left-nav svg{
+        height: 2.5rem;
+    }
+}
+@media screen and (min-width: 1024px){
+    .social-stats-container {
+        
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .left-nav svg {
+        height: 3rem;
+    }
 }
