--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,7 @@ li{
     grid-template-areas: 
         "logo offset rightNav";
     width: 100%;
+    
    
 }
 
@@ -96,6 +97,7 @@ padding: 1rem;
 .search-dashboard {
     display: grid;
     grid-template-columns: 25% 75%;
+    grid-area: dashboard;
  
    
 }
@@ -123,6 +125,7 @@ section.alert {
     display: grid;
     grid-template-columns: 100%;
     padding: 3rem;
+    grid-area: alert;
     
 }
 .alert-box {
@@ -140,14 +143,16 @@ section.alert {
     color: #fff;
 }
 
-
+.traffic{
+   grid-area: traffic;
+}
 
 .traffic-header {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 5px;
     padding:1rem;
-}
+ }
 .traffic ul {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -157,6 +162,7 @@ section.alert {
 
 section.social-stats-section {
     max-width: 100vw;
+    grid-area: socialStats;
 }
 
 .social-stats-container {
@@ -208,22 +214,70 @@ section.social-stats-section {
 .left-nav{
   grid-area: leftNav;
 }
-.main-content {
-  grid-area: main;
+
+.recent-activity{
+    grid-area: activity;
 }
+    .recent-activity li {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 0;
+        text-align: left;
+    }
+.new-members{
+    grid-area: members;
+}
+.member-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-areas: "members activity";
+}
+.new-members li {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 0;
+    text-align: left;
+}
+.daily-traffic {
+    grid-area: daily;
+}
+
+.mobile-users {
+    grid-area: mobile;
+}
+
+.data-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-areas: "daily mobile";
+}
+
+.forms-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-areas: "message settings";
+}
+.message-container, .settings-container{
+    padding: 1rem;
+   
+}
+    .message-user input, .message-user textarea, .message-user button {
+        width: 100%;
+        padding: 1rem;
+    }
+
+    .settings ul{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
 
 .container {
     display: grid;
     grid-template-columns: 10% 90%;
-    grid-template-areas: 
-        "leftNav main" 
-        "leftNav main" 
-        "leftNav main";
+    grid-template-areas: "leftNav main" "leftNav main" "leftNav main";
     grid-template-rows: auto 1fr auto;
     height: 100vh;
 }
-
-
 @media screen and (max-width: 768px){
     .container {
         grid-template-columns: 0% 100%;
